# Cloth-Simulation

./: .clang-format  .clang-formatv2.clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  azure-pipelines.yml  clang-format-2.txt  conanfile.py  vcpkg.json
Application/: CMakeLists.txt  main.cpp
Assets/: CMakeLists.txt
Assets/Shaders/: FragShader.frag  VertexShader.vert  compile.bat  line_frag.frag  line_vert.spv  line_vert.vert  vert.spv
Benchmarks/: Benchmark.md  CMakeLists.txt  Point3DBenchmark.cpp
CMake/: FindSphinx.cmake
Cmake/: Unitily.cmake
Conan/: conanfile.py
Docs/: CMakeLists.txt  VulkanCordinationSpace.rst
Docs/Sphinx/source/: conf.py  index.rst
Unittest/: CmakeLists.txt
Unittests/: BuildTests.cmake  CMakeLists.txt  TestExplolerTest.cpp
Unittests/Common/: CMakeLists.txt  Helpers.hpp
Unittests/GeometryTests/: CMakeLists.txt  Matrix4x4Tests.cpp  VertexTests.cpp
Unittests/IOTests/: CMakeLists.txt  ObjImporterTests.cpp
Unittests/RendererTests/: CMakeLists.txt  CameraTests.cpp  RendererTests.cpp
Unittests/ViewportTests/: CMakeLists.txt  CameraTests.cpp  ModelsMenager.cpp  VulkanWindowTests.cpp
Utility/: CMakeLists.txt  MemoryTypeCheck.cpp  Prototyping.cpp
Utility/Notes/: Architecture_Idea.docx  GeometryNotes.md  Notes.md  ObservabilityTools.md  VulkanNotes.md
Utility/Prototyping/: CMakeLists.txt  MemoryTypeCheck.cpp  Prototyping.cpp  TypeTraits.cpp
Utility/PythonScripts/: GenerateSphere.py  MathExamples.py
